# rt2_ass1_ros1

./: CMakeLists.txt  README.md  mapping_rule.yaml  package.xml  pioneerROS.ttt
action/: go_to_point.action
launch/: ros2_ass1_launcher.py  sim.launch  sim_ros2.launch  sim_small.launch
ros2_ass1/: CMakeLists.txt
ros2_ass1/src/: robot_fsm.cpp
rt2_ass1_ros1/launch/: sim_small.launch
rt2_ass1_std/: CMakeLists.txt  package.xml
rt2_ass1_std/launch/: sim.launch
rt2_ass1_std/src/: position_service.cpp  state_machine.cpp
scripts/: go_to_point.py  go_to_point_action.py  user_interface.py
scripts/backup/: funzia.py
src/: m_composition.cpp  position_server.cpp  position_service.cpp  robot_fsm.cpp  state_machine.cpp
